<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/randomly"
        android:textColor="#3F51B5"
        android:textSize="48sp"
        android:textStyle="bold"
        tools:text="Randomly" />

    <Button
        android:id="@+id/joke"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:onClick="onStartJoke"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/tell_me_a_joke" />

    <Button
        android:id="@+id/advice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:onClick="onStartAdvice"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/give_me_advice" />


    <Button
        android:id="@+id/fact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:onClick="onStartFact"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tell_me_an_interesting_fact" />

    <Button
        android:id="@+id/kanye"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:onClick="onStartKanye"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/give_me_kanye" />

    <Button
        android:id="@+id/quote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:onClick="onStartQuote"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/give_me_quote" />

    <Button
        android:id="@+id/nonsense"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:onClick="onStartNonsense"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/give_me_nonsense" />

    <Button
        android:id="@+id/cat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:onClick="onStartCatFact"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/give_me_cat" />

    <Button
        android:id="@+id/dog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:onClick="onStartDogFact2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/give_me_dog" />
</LinearLayout>