<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContentActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="#673AB7"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/textContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/another"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onAskForSnippet"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tell_me_another" />

    <Button
        android:id="@+id/shareIt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onShare"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/share" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onBack"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/back" />
</LinearLayout>